# Glyph-Engine

./: .gitignore  .zenodo.json  AGENTS.md  AGENT_STATUS_REPORT_2026-04-24.md  AUDITOR_PLAYBOOK.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_POLICY.md  GOVERNANCE.md  HF_CUSTODY_REGISTER.md  MIGRATION_PLAN.md  NOTICE  NOTICE.md  PRIVATE_INTERNAL_LICENSE_NOTICE.md  PUBLIC_AUDIT_LIMITS.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SOURCE_BOUNDARY.md  SOVEREIGN_PRD.md  THIRD_PARTY_NOTICES.md  TODO.md  WORKSTREAM_GPD_INIT_CHECKLIST.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.gpd/: CONVENTIONS.md  DECISIONS.md  NOTATION_GLOSSARY.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  state.json
.gpd/phases/: README.md
.gpd/phases/00-workstream-bootstrap/: 00-01-PLAN.md  00-01-SUMMARY.md  00-CONTEXT.md  00-RESEARCH.md  00-VERIFICATION.md
.gpd/phases/01-consumer-and-interface-freeze/: 01-01-PLAN.md  01-CONTEXT.md  01-DECISIONS.md  01-RESEARCH.md  01-SUMMARY.md  01-VERIFICATION.md
.gpd/phases/02-minimal-extraction-smoke/: 02-01-DECISIONS.md  02-01-PLAN.md  02-01-SUMMARY.md  02-01-VERIFICATION.md  02-02-DECISIONS.md  02-02-SUMMARY.md  02-02-VERIFICATION.md  02-CONTEXT.md
_internal/: AGENT_STATUS_REPORT_2026-04-24.md  GPD_BOOTSTRAP_GUIDE.md  TODO.md  UNIVERSAL_STARTUP_PROMPT.md
artifacts/ablation/: ablation_report.json
artifacts/ablation/per_arm/: baseline_hog.manifest.json  baseline_hog.smoke_report.json  baseline_hu_regionprops.manifest.json  baseline_hu_regionprops.smoke_report.json  baseline_orb.manifest.json  baseline_orb.smoke_report.json
artifacts/robustness/: robustness_report.json
code/: README.md
docs/: ARCHITECTURE.md  CURRENT_PUBLIC_STATUS.md  FAQ.md  LEGAL_BOUNDARIES.md  PROVENANCE_LABELS.md  README.md  SUPPORT.md
scripts/: run_ablation.py
src/gnosis_glyph_engine/: __init__.py  fixtures.py  manifest_builder.py  protocols.py
src/gnosis_glyph_engine/baselines/: __init__.py  hog.py  hu_regionprops.py  orb.py
src/gnosis_glyph_engine/owned/: __init__.py
src/gnosis_glyph_engine/scripts/: run_ablation.py  run_robustness.py
tests/: test_baselines.py  test_fixtures.py  test_manifest_builder.py
tools/gnosis_ops_gates/: coupling_audit.py
