[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnosis-glyph-engine"
version = "0.1.0a1"
description = "Internal extraction-target scaffold for glyph geometry and descriptor kernels. Not a public library. Authority metric: package_boundary_earned = UNTESTED."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Zer0pa Architect-Prime", email = "architects@zer0pa.ai" }]
keywords = ["glyph", "descriptor", "internal-extraction-target"]

dependencies = [
  "numpy>=1.24",
  "opencv-python-headless>=4.8",
  "scikit-image>=0.22",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]
test = [
  "pytest>=7.4",
]
# The sibling `gnosis-morph-bench` is the cross-repo contract partner. It is
# NOT declared as a hard dependency here because `gnosis-glyph-engine` must
# remain independently installable. Tests that require morph-bench skip
# automatically when it is unavailable (see `tests/test_manifest_builder.py`).
# Supply it on the execution host with an editable path install or a future
# pinned git ref, e.g.:
#     pip install -e /path/to/gnosis-morph-bench
# or:
#     pip install 'gnosis-morph-bench @ git+ssh://git@github.com/Zer0pa/Morph-Bench@<rev>'
morph-bench-contract = [
  # intentionally empty; declarative marker only
]

[project.scripts]
glyph-engine-ablation = "gnosis_glyph_engine.scripts.run_ablation:main"
glyph-engine-robustness = "gnosis_glyph_engine.scripts.run_robustness:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["gnosis_glyph_engine*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
